# thinky-manifolds

./: .gitignore  LICENSE  PROFILING_GUIDE.md  README.md  admm.qmd  analysis.sh  create_markdown_table.py  export_dual_loss_to_csv.py  load_wandb_results.py  main.py  plot_dual_loss.py  pyproject.toml  setup_tensorboard_tunnel.sh  sweep.sh  test_jax_conversion.py  wandb_results.csv
src/: hyperspherical_descent.py  main.py  manifold_muon.py  msign.py
