[project]
name = "thinky-manifolds"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "debugpy>=1.8.17",
    "einops>=0.8.1",
    "ipykernel>=6.30.1",
    "jax>=0.7.2",
    "jupyter-client>=8.6.3",
    "matplotlib>=3.10.6",
    "matplotlib-backend-sixel>=0.1.0",
    "optax>=0.2.6",
    "pynvim>=0.6.0",
    "pyright>=1.1.405",
    "pytest>=8.4.2",
    "treescope>=0.1.10",
]
